@@ -1,3 +1,4 @@
+	* fix auto-manage issue when pausing session
 	* fix bug in non-sparse mode on windows, causing incorrect file errors to be generated
 	* fix set_name() on file_storage actually affecting save paths
 	* fix large file support issue on mingw
